--- a/protocol.tex
+++ b/protocol.tex
@@ -226,6 +226,9 @@ Wien, \today
 \chapter{Containerorchestrierung mit Kubernetes}
 \input{sections/kubernetes.tex}
 
+\chapter{Backup mit Veeam}
+\input{sections/veeam.md.tex} 
+
 \chapter{Netzwerküberwachung mit PRTG}
 \input{sections/prtg.md.tex} 
 
